--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -8,8 +8,27 @@
     </head>
 
     <body>
-        <h1>Rango says...</h1>
-        hello world! <strong>{{ boldmessage }}</strong><br />
+        <h1>Rango says Hello</h1>
+
+        {% if categories %}
+            <ul>
+                {% for category in categories %}
+                    <li><a href="/rango/category/{{category.slug}}">{{ category.name }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No hay datos</strong>
+        {% endif %}
+
+        <h2>Most viewed pages</h2>
+        {% if pages %}
+            <ol>
+            {% for page in pages %}
+               <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ol>
+        {% endif %}
+
         <img src="{% static "images/rango.jpg" %}" alt="Rango" />
         <a href="/rango/about/">About</a><br />
     </body>
