Se agrega el usuario y la posibilidad de agregar paginas y categorias.

--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -13,6 +13,8 @@
             {% endfor %}
         </ul>
         {% endif %}
+
+        <a href="/rango/category/{{ category.name }}/add-page">Add Page</a>
     {% else %}
         La categoria no existe
     {% endif %}
