--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -30,7 +30,10 @@
         {% endif %}
 
         <img src="{% static "images/rango.jpg" %}" alt="Rango" />
+        <br />
+        <a href="/rango/add_category/">Add a New Category</a><br />
         <a href="/rango/about/">About</a><br />
+
     </body>
 
 </html>
