--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
+{% extends 'layout.html' %}
+
 {% load staticfiles %}
-<html>
-    <head>
-        <title>Add Category</title>
-    </head>
-    <body>
-        <h1>Add Category</h1>
-        <form method="POST" action="/rango/add_category/" id="category_form">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
 
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Add category" />
-        </form>
-        
-    </body>
+{% block title %}Add Category{% endblock %}
 
-</html>
+{% block body_block %}
+    <h1>Add Category</h1>
+    <form method="POST" action="{% url 'add_category' %}" id="category_form">
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+        {% endfor %}
+
+        {% for field in form.visible_fields %}
+            {{ field.errors }}
+            {{ field.help_text }}
+            {{ field }}
+        {% endfor %}
+        <input type="submit" name="submit" value="Add category" />
+    </form>
+{% endblock %}
