--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,28 +1,26 @@
-<!DOCTYPE html>
+{% extends 'layout.html' %}
+
 {% load staticfiles %}
-<html>
-    <head>
-        <title>Rango - Add Page</title>
-    </head>
-    <body>
-    	{% if category %}
-        <h1>Add Page</h1>
-        <form method="POST" action="/rango/category/{{ category.name }}/add-page" id="category_form">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
 
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Add page" />
-        </form>
-        {% else %}
-        	The category is not valid
-        {% endif %}
-    </body>
+{% block title %}Add Page{% endblock %}
 
-</html>
+{% block body_block %}
+    {% if category %}
+    <h1>Add Page</h1>
+    <form method="POST" action="{% url 'add_page' category.slug %}" id="category_form">
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+        {% endfor %}
+
+        {% for field in form.visible_fields %}
+            {{ field.errors }}
+            {{ field.help_text }}
+            {{ field }}
+        {% endfor %}
+        <input type="submit" name="submit" value="Add page" />
+    </form>
+    {% else %}
+        The category is not valid
+    {% endif %}
+{% endblock %}
