--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% load staticfiles %}
+
+{% block title %}{{ category_name }}{% endblock %}
+
+{% block body_block %}
     <h1>{{ category_name }}</h1>
     {% if category %}
         {% if pages %}
@@ -14,9 +15,8 @@
         </ul>
         {% endif %}
 
-        <a href="/rango/category/{{ category.name }}/add-page">Add Page</a>
+        <a href="{% url 'add_page' category.slug %}">Add Page</a>
     {% else %}
         La categoria no existe
     {% endif %}
-</body>
-</html>
+{% endblock %}
